# blackray

./: .gitignore  CMakeLists.txt  README.md  build.sh  disk.csv  get_xillver_spectrum.py  img.py  metric.cpp  raytracingnew.cpp  run.py  startbrq.sh  startjobbr.sh
raytracer/: intersection.cpp  main.cpp  metric_rderivatives.cpp  redshift.cpp
src/convolver/: convolver.cpp
src/raytracer/: def.hpp  diffeqs.cpp  main.cpp  metric.cpp  metric_rderivatives.cpp  raytracingnew.cpp  redshift.cpp
